// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`conditional assignment (1) 1`] = `
"const foo = true && {
  bar: "baz",
};
"
`;

exports[`conditional assignment (2) 1`] = `
"const foo = false || {
  bar: "baz",
};
"
`;

exports[`conditional assignment (3) 1`] = `
"const foo = null ?? {
  bar: "baz",
};
"
`;

exports[`destructuring assignment (1) 1`] = `
"const {
  foo,
  bar: { baz },
} = {};
"
`;

exports[`destructuring assignment (2) 1`] = `
"try {
  // code
} catch ({
  data: {
    message: { errors },
  },
}) {
  // code
}
"
`;

exports[`object assignment (1) 1`] = `
"const foo = {};
"
`;

exports[`object assignment (2) 1`] = `
"const foo = {
  bar: {
    baz: "baz",
  },
};
"
`;

exports[`object assignment (3) 1`] = `
"const foo = {
  bar() {},
  ["baz"]() {},
};
"
`;
